[project]
name = "end-2-end-rag-medical-chatbot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dvc>=3.61.0",
    "faiss-cpu>=1.11.0.post1",
    "flask>=3.1.1",
    "hf-xet>=1.1.5",
    "huggingface-hub>=0.33.5",
    "langchain>=0.3.27",
    "langchain-community>=0.3.27",
    "langchain-groq>=0.3.6",
    "langchain-huggingface>=0.3.1",
    "pypdf>=5.8.0",
    "python-dotenv>=1.1.1",
    "sentence-transformers>=5.0.0",
    "setuptools>=80.9.0",
]
